fix footer pagina not responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,9 +318,12 @@ border: 1px solid #e1e1e1;
 
 
 #footer {
+    /*position: fixed;*/
     background-color:#E91C1C;
     color:#fff;
-    padding:20px 50px 20px 50px;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    padding:50px 50px 50px 50px;
     text-align:right;
 }
 
